# UI_Workspace

./: .gitignore  CMakeLists.txt  Main.qml  README.md  build.sh  config.yaml  main.cpp  run.sh
Climate/src/: Climate.qml  Fan.qml  Functions1.qml  Functions2.qml  Temperature_front.qml  Temperature_rear.qml
Media/: EngineMedia.cpp  EngineMedia.h  enginemedia.cpp  enginemedia.h  images.qrc  music.qrc
Media/src/: ControlMedia.qml  FunctionModel.cpp  FunctionModel.h  ListButtonMedia.qml  ListMedia.qml  Media.qml  RenderVideo.h  ScreenWithMusic.qml  SliderMedia.qml  SongListController.cpp  SongListController.h  SpeedMusic.qml  VideoListController.cpp  VideoListController.h  VideoOutput.qml  VideoPlayer.h  VolumeMusic.qml  listmodelcontroller.h  videoplayer.h
SysUI/: CustomTabButton.qml  main.qml
apps/Climate/: info.yaml
apps/Dashboard/: info.yaml
apps/Dashboard/src/: Dashboard.qml
apps/Media/: enginemedia.h  images.qrc  info.yaml
apps/Media/src/: ControlMedia.qml  listmodelcontroller.cpp
apps/climate/: info.yaml
apps/dashboard/: info.yaml
apps/media/: info.yaml
native/climate/: CMakeLists.txt  ClimateAdaptor.cpp  ClimateAdaptor.h  ClimateEngine.cpp  ClimateEngine.h  ClimateInterface.cpp  ClimateInterface.h  FunctionModel.cpp  FunctionModel.h  climate.qrc  main.cpp
native/climate/Screens/: ButtonFunction.qml  Fan.qml  Functions.qml  Main.qml  Temperature.qml
native/dashboard/: CMakeLists.txt  DashboardInterface.cpp  DashboardInterface.h  FunctionModelAdaptor.cpp  FunctionModelAdaptor.h  FunctionModelProvider.cpp  FunctionModelProvider.h  Main.qml  images.qrc  main.cpp
native/media/: CMakeLists.txt  ControlMedia.qml  FunctionModel.cpp  FunctionModel.h  FunctionModelInterface.cpp  FunctionModelInterface.h  ListButtonMedia.qml  ListMedia.qml  Main.qml  MediaEngine.cpp  MediaEngine.h  RenderVideo.cpp  ScreenWithMusic.qml  SliderMedia.qml  SongListController.cpp  SongListController.h  SpeedMusic.qml  VideoListController.cpp  VideoListController.h  VideoOutput.qml  VolumeMusic.qml  main.cpp
system-ui/: main.qml
